# Puzznic-Solver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  run.sh
include/: board.hpp  constants.hpp  game.hpp  gui.hpp  solver.hpp  structs.hpp  textureManager.hpp  texture_paths.hpp  tileManager.hpp  tiles.hpp  window.hpp
include/GUI/: board.hpp  board_background.hpp  controls.hpp  itemCounter.hpp  item_counter.hpp  texture_manager.hpp  tileManager.hpp  tiles.hpp  window.hpp
include/Game/: boardState.hpp  game.hpp  human_player.hpp
levels/: level_1_1_cpp.csv
levels/stage_1/: level_1_1.csv  level_1_1_cpp.csv  level_1_2.csv
levels/test/: test 1.csv  test 2.csv  test_single.csv  testfile_one.csv  testfile_two.csv
src/: CMakeLists.txt  board.cpp  game.cpp  game.hpp  gui.cpp  main.cc  main.cpp  structs.hpp  textureManager.cpp  tileManager.cpp  tiles.cpp  window.cpp
src/GUI/: board.cpp  board_background.cpp  controls.cpp  itemCounter.cpp  item_counter.cpp  textureManager.cpp  texture_manager.cpp  tileManager.cpp  tiles.cpp  window.cpp
src/Game/: boardState.cpp  game.cpp  human_player.cpp
src/Solver/: solver.cpp
src/common/: CMakeLists.txt  constants.hpp  enums.hpp  file_paths.hpp  helper_functions.hpp  structs.hpp
src/constants/: texture_paths.hpp
src/game/: CMakeLists.txt  board_state.cc  game.cc  human_player.cc
src/game/include/: boardState.hpp  game.hpp  human_player.hpp
src/gui/: CMakeLists.txt  board.cc  board_background.cc  board_buttons.cc  buttons.cc  controls.cc  game_window.cc  gui_data.cc  item_counter.cc  rectangle.cc  text.cc  texture_manager.cc  tile_highlight.cc  tile_manager.cc
src/gui/include/: board.hpp  board_background.hpp  board_buttons.hpp  button.hpp  button_types.hpp  controls.hpp  game_window.hpp  gui_data.hpp  item_counter.hpp  rectangle.hpp  text.hpp  texture_manager.hpp  tile_highlight.hpp  tile_manager.hpp
src/solver/: CMakeLists.txt
